        - fix return value of eio_sendfile_sync.
        - include sys/mman.h for msync.
	- added EIO_STACKSIZE.
	- added msync, mtouch support (untested).
        - added sync_file_range (untested).
        - fixed custom support.
        - use a more robust feed-add detection method.
	- "outbundled" from IO::AIO.
        - eio_set_max_polltime did not properly convert time to ticks.
        - tentatively support darwin in sendfile.
        - fix freebsd/darwin sendfile.
        - also use sendfile emulation for ENOTSUP and EOPNOTSUPP
          error codes.
        - add OS-independent EIO_MT_* and EIO_MS_* flag enums.
        - add eio_statvfs/eio_fstatvfs.
        - add eio_mlock/eio_mlockall and OS-independent MCL_* flag enums.
        - no longer set errno to 0 before making syscalls, this only lures
          people into the trap of believing errno shows success or failure.
        - "fix" demo.c so that it works as non-root.
        - suppoert utimes seperately from futimes, as some systems have
          utimes but not futimes.
        - use _POSIX_MEMLOCK_RANGE for mlock.
        - do not (errornously) overwrite CFLAGS in configure.ac.
        - mknod used int3 for dev_t (§2 bit), not offs (64 bit).
        - fix memory corruption in eio_readdirx for the flags
          combination EIO_READDIR_STAT_ORDER | EIO_READDIR_DIRS_FIRST.
        - port to openbsd (another blatantly broken non-UNIX/POSIX platform).
        - fix eio_custom prototype.
        - work around a Linux (and likely FreeBSD and other kernels) bug
          where sendfile would not transfer all the requested bytes on
          large transfers, using a heuristic.
        - use libecb, and apply lots of minor space optimisations.
        - disable sendfile on darwin, broken as everything else.
        - add realpath request and implementation.
	- cancelled requests will still invoke their request callbacks.
        - add fallocate.
        - do not acquire any locks when forking.
