@@ -68,7 +68,7 @@
 #ifndef ECB_MEMORY_FENCE
   #if ECB_GCC_VERSION(2,5)
     #if __x86
-      #define ECB_MEMORY_FENCE         __asm__ __volatile__ ("lock; or.b $0, -1(%%esp)" : : : "memory")
+      #define ECB_MEMORY_FENCE         __asm__ __volatile__ ("lock; orb $0, -1(%%esp)" : : : "memory")
       #define ECB_MEMORY_FENCE_ACQUIRE ECB_MEMORY_FENCE
       #define ECB_MEMORY_FENCE_RELEASE ECB_MEMORY_FENCE /* better be safe than sorry */
     #elif __amd64
@@ -84,7 +84,7 @@
     #define ECB_MEMORY_FENCE         __sync_synchronize ()
     #define ECB_MEMORY_FENCE_ACQUIRE ({ char dummy = 0; __sync_lock_test_and_set (&dummy, 1); })
     #define ECB_MEMORY_FENCE_RELEASE ({ char dummy = 1; __sync_lock_release      (&dummy   ); })
-  #elif _MSC_VER >= 1400
+  #elif _MSC_VER >= 1400 && 0 /* TODO: only true when using volatiles */
     #define ECB_MEMORY_FENCE         do { } while (0)
     #define ECB_MEMORY_FENCE_ACQUIRE ECB_MEMORY_FENCE
     #define ECB_MEMORY_FENCE_RELEASE ECB_MEMORY_FENCE
